# termino

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
src/: cli.rs  display.rs  lib.rs  main.rs  notifications.rs  pomodoro.rs  storage.rs  timer.rs
src/termino/: __init__.py  __main__.py  cli.py  display.py  notifications.py  pomodoro.py  storage.py  timer.py
tests/: test_cli.py  test_cli.rs  test_pomodoro.py  test_pomodoro.rs  test_storage.py  test_storage.rs  test_timer.py  test_timer.rs
