[package]
name = "termino"
version = "0.2.1"
edition = "2024"
description = "A sleek terminal-based timer and stopwatch CLI tool — rewritten in Rust"
authors = ["EdgarOrtegaRamirez"]
license = "MIT"
repository = "https://github.com/EdgarOrtegaRamirez/termino"
homepage = "https://github.com/EdgarOrtegaRamirez/termino"

[[bin]]
name = "termino"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossterm = "0.28"
notify-rust = "4"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
anyhow = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 2
strip = true