[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "termino"
version = "0.1.0"
description = "A sleek terminal-based timer and stopwatch CLI tool"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "EdgarOrtegaRamirez"}
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/EdgarOrtegaRamirez/termino"
Repository = "https://github.com/EdgarOrtegaRamirez/termino"

[project.scripts]
termino = "termino.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]